fix styling cut off images

--- a/page/style-post.css
+++ b/page/style-post.css
@@ -38,10 +38,10 @@ main {
     text-align: left;
   }
 
-  .frame-block {
+  /* .frame-block {
     overflow-x: auto !important;
     max-width: 100% !important;
-  }
+  } */
 
   .scroll-x {
     overflow-x: auto;
